[fix]c-lineのz-indexを変更しております

--- a/src/sass/object/project/_p-top-works.scss
+++ b/src/sass/object/project/_p-top-works.scss
@@ -77,6 +77,8 @@
 
 .p-top-works__content {
   background: #333;
+  position: relative;
+  z-index: 1;
 
   @include mq(md) {
     display: flex;
